Rsocket Kafka producer

--- a/rsocket-service/src/main/resources/application.properties
+++ b/rsocket-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.rsocket.server.port=6565
+bootstrap-servers=${BOOTSTRAP_SERVERS}
+
+sandbox-cluster-username=${SANDBOX_CLUSTER_USERNAME}
+sandbox-cluster-password=${SANDBOX_CLUSTER_PASSWORD}
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+spring.kafka.consumer.group-id=reactivekafkaproducer
+
+FAKE_PRODUCER_DTO_TOPIC=confluent_test
+
+
+
